--- a/css/quiz.css
+++ b/css/quiz.css
@@ -2,23 +2,21 @@
 
 .blackboard {
   font-size: 1.2em;
-  background:rgb(49,52,58);
-  width:61%;
+  background: rgb(49, 52, 58);
+  width: 61%;
   min-height: 80vh;
 }
 
-#drToon {
-  width:20vw;
-}
+
 
 fieldset {
   text-align: left;
-  border:4px solid white;
+  border: 4px solid white;
   padding: 2em;
   border-radius: 0.5em;
 }
 
-legend{
+legend {
   padding: 0 1em;
   font-size: 1.5em;
 }
@@ -29,7 +27,7 @@ legend{
 }
 
 .form-element label {
-  padding-right:1em;
+  padding-right: 1em;
   cursor: pointer;
 }
 
@@ -38,64 +36,65 @@ legend{
 }
 
 .question {
-  font-size:1.2em;
+  font-size: 1.2em;
 }
 
-.radio{
-  -webkit-appearance:button;
-  -moz-appearance:button;
-  appearance:button;
+.radio {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
   margin-right: 0.5em;
-  border:1px solid white;
-  background: rgba(0,0,0,0.5);
-  width:20px;
-  height:20px;
-  border-radius:50%;
-  selector:none;
-  outline:none;
+  border: 1px solid white;
+  background: rgba(0, 0, 0, 0.5);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  selector: none;
+  outline: none;
 }
 
 .radio:checked {
-  background:rgb(214,217,99);
+  background: rgb(214, 217, 99);
 }
 
-.radio:hover{
+.radio:hover {
   cursor: pointer;
 }
 
 #quiz-submit {
   text-decoration: none;
-  color:white;
-  background:green;
-  border-radius:0.5em;
-  padding:0.5em 1em;
+  color: white;
+  background: green;
+  border-radius: 0.5em;
+  padding: 0.5em 1em;
 }
 
-#quiz-submit:hover{
+#quiz-submit:hover {
   cursor: pointer;
-  box-shadow: inset 0 -2px 0 0 rgba(10,10,10,0.8), 0 0 4px 0 rgba(10,10,10,0.8);
+  box-shadow: inset 0 -2px 0 0 rgba(10, 10, 10, 0.8), 0 0 4px 0 rgba(10, 10, 10, 0.8);
 }
 
-#modal2 img{
+#modal2 img {
   position: absolute;
-  bottom:1em;
-  left:1em;
+  bottom: 1em;
+  left: 1em;
   width: 50px;
   margin: auto;
 }
 
 form i {
-  color:orange;
+  color: orange;
 }
 
 /* ********************MEDIA QUERIES******************** */
 
-@media (max-width:1000px){
-  input{
-    margin-top:0.5em;
-    background:red;
+@media (max-width:1000px) {
+  input {
+    margin-top: 0.5em;
+    background: red;
   }
-  .form-item{
+
+  .form-item {
     padding-bottom: 1em;
   }
 }
