--- a/css/index.css
+++ b/css/index.css
@@ -3,42 +3,43 @@
 #begin-button {
   text-decoration: none;
   font-size: 1.5em;
-  color:white;
+  color: white;
   letter-spacing: 0.1em;
   font-weight: bold;
   text-transform: uppercase;
-  width:150px;
+  width: 150px;
   padding: 1em;
   border-radius: 0.5em;
   background: green;
-  border:none;
+  border: none;
 }
 
 h1 {
   font-size: 4em;
   font-family: 'Creepster', cursive;
+  /* font-family: 'Creepster', cursive; */
   text-shadow: 2px 3px 10px black;
 }
 
-#begin-button:hover{
+#begin-button:hover {
   cursor: pointer;
-  box-shadow: inset 0 -3px 0 0 rgba(10,10,10,0.8), 0 0 5px 0 rgba(10,10,10,0.8);
+  box-shadow: inset 0 -3px 0 0 rgba(10, 10, 10, 0.8), 0 0 5px 0 rgba(10, 10, 10, 0.8);
 }
 
 #user-name {
   text-align: center;
-  font-size:1.5em;
-  width:200px;
-  height:30px;
+  font-size: 1.5em;
+  width: 200px;
+  height: 30px;
   border-radius: 0.5em;
-  border:3px solid black;
+  border: 3px solid black;
 }
 
 #start {
   letter-spacing: 0.1em;
   padding: 0.5em;
-  background:green;
-  width:130px;
+  background: green;
+  width: 130px;
   height: 30px;
   border-radius: 0.5em;
   text-transform: uppercase;
@@ -47,19 +48,19 @@ h1 {
 
 #start:hover {
   cursor: pointer;
-  box-shadow: inset 0 -2px 0 0 rgba(10,10,10,0.8), 0 0 4px 0 rgba(10,10,10,0.8);
+  box-shadow: inset 0 -2px 0 0 rgba(10, 10, 10, 0.8), 0 0 4px 0 rgba(10, 10, 10, 0.8);
 }
 
 #computer {
   z-index: 0;
-  position:absolute;
-  right:10px;
+  position: absolute;
+  right: 10px;
   bottom: 9%;
   width: 25vw;
 }
 
 .modal label {
-  font-size:1.5em;
+  font-size: 1.5em;
 }
 
 input[type="text"] {
@@ -68,12 +69,13 @@ input[type="text"] {
 
 /* ********************MEDIA QUERIES******************** */
 
-@media (min-width:1200px){
+@media (min-width:1200px) {
   .page-overview p {
-    font-size:1.5em;
+    font-size: 1.5em;
   }
+
   #computer {
-    width:350px;
+    width: 350px;
     right: 0;
   }
 }
